k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycache
  namespace: caching
spec:
  selector:
    app: mycache
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
