k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycache
  namespace: caching
spec:
  ingressClassName: nginx
  rules:
    - host: mycache.msd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mycache
                port:
                  number: 8080
